# ChangeLog for dev-perl/HTML-Template
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Template/ChangeLog,v 1.42 2011/09/04 11:20:39 tove Exp $

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -HTML-Template-2.9.ebuild:
  Cleanup

  03 Sep 2011; Torsten Veller <tove@gentoo.org> HTML-Template-2.900.0.ebuild:
  Merge stable keywords from former version scheme ebuild

*HTML-Template-2.900.0 (30 Aug 2011)

  30 Aug 2011; Torsten Veller <tove@gentoo.org> +HTML-Template-2.900.0.ebuild:
  Change version scheme

  03 Dec 2010; Michael Weber <xmw@gentoo.org> HTML-Template-2.9.ebuild:
  add ~arm (bug 302981)

  01 May 2009; Torsten Veller <tove@gentoo.org> -HTML-Template-2.8.ebuild:
  Cleanup

  11 Jul 2007; Raúl Porcel <armin76@gentoo.org> HTML-Template-2.9.ebuild:
  alpha/ia64/x86 stable

  30 Jun 2007; Joshua Kinard <kumba@gentoo.org> HTML-Template-2.9.ebuild:
  Marked unstable on mips, per #183592.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  HTML-Template-2.9.ebuild:
  ppc stable

  10 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  HTML-Template-2.9.ebuild:
  sparc stable

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  HTML-Template-2.9.ebuild:
  Marking stable amd64

*HTML-Template-2.9 (05 Feb 2007)

  05 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  +HTML-Template-2.9.ebuild:
  Version bump

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  -HTML-Template-2.7.ebuild, HTML-Template-2.8.ebuild:
  Ebuild maintenance

  28 Dec 2006; Javier Villavicencio <the_paya@gentoo.org>
  HTML-Template-2.8.ebuild:
  Added ~x86-fbsd keyword.

  20 Oct 2006; Bryan Østergaard <kloeri@gentoo.org>
  HTML-Template-2.8.ebuild:
  Stable on Alpha.

  11 Oct 2006; Markus Rothe <corsair@gentoo.org> HTML-Template-2.7.ebuild,
  HTML-Template-2.8.ebuild:
  Added ~ppc64; bug #150889

  29 Sep 2006; Christian Hartmann <ian@gentoo.org>