@@ -1,0 +1,17 @@
+# Copyright 1999-2012 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Template/HTML-Template-2.910.0.ebuild,v 1.1 2012/03/31 08:32:39 tove Exp $
+
+EAPI=4
+
+MODULE_AUTHOR=WONKO
+MODULE_VERSION=2.91
+inherit perl-module
+
+DESCRIPTION="A Perl module to use HTML Templates"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~ia64 ~mips ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
+IUSE=""
+
+SRC_TEST="do"
