@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/HTML-Template
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Template/ChangeLog,v 1.42 2011/09/04 11:20:39 tove Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/HTML-Template/ChangeLog,v 1.43 2012/03/31 08:32:39 tove Exp $
+
+*HTML-Template-2.910.0 (31 Mar 2012)
+
+  31 Mar 2012; Torsten Veller <tove@gentoo.org> +HTML-Template-2.910.0.ebuild:
+  Version bump
 
   04 Sep 2011; Torsten Veller <tove@gentoo.org> -HTML-Template-2.9.ebuild:
   Cleanup
